--- a/stylesheets.css
+++ b/stylesheets.css
@@ -7,5 +7,10 @@
  }
 .header-list li {
   float:left;
-  
+}
+.header-logo{
+ color:rgb(255,255,255);
+}
+.header-list li {
+ color:rgb(255,255,255);
 }
